--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </div>
 
             <button type="submit" id="add" class="btn btn-primary">Add to list</button>
+            <button type="submit" class="btn btn-primary mx-2" onclick="reset()">Reset</button>
         
 
         <div id="list">
@@ -46,12 +47,12 @@
                         </tr>
                     </thead>
                     <tbody id="bd">
-                        <tr>
+                        <!-- <tr>
                             <th scope="row">1</th>
                             <td>Morning routine</td>
                             <td>Wake up at 4:00 AM</td>
                             <td><button class="btn btn-primary">Delete</button></td>
-                        </tr>
+                        </tr> -->
                         
                     </tbody>
                 </table>
